--- a/packages/examples/index.html
+++ b/packages/examples/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="js/esobjs-xe2-plugin/dist-web/xe2-assets/js/load-common.js"></script>
     <title>Vite + Vue + TS</title>
   </head>
   <body>
